@@ -5,7 +5,7 @@ importFrom("stats", "end")
 importFrom("stats", "frequency")
 importFrom("stats", "window")
 
-export(arfima, Arima, arima.errors, auto.arima, BoxCox, croston, decompose,
+export(arfima, Arima, arima.errors, auto.arima, BoxCox, croston, 
 fitted.Arima, forecast, forecast.ar, forecast.Arima, forecast.ets, forecast.fracdiff,
 forecast.HoltWinters, forecast.lm, forecast.stl, forecast.StructTS, forecast.bats, forecast.tbats, accuracy, holt, hw, InvBoxCox,
 meanf, logLik.ets, monthdays, na.interp, ets, plot.ets, plot.forecast,
