@@ -106,49 +106,44 @@ forecast.tbats <- function(object, h=10, level=c(80,95), fan=FALSE, ...) {
 
 
 makeTextTBATS <- function(object) {
-	name <- "TBATS( {"
+	name <- "TBATS("
 	if(!is.null(object$lambda)) {
-		name <- paste(name, round(object$lambda, digits=6), sep="")
+		name <- paste(name, round(object$lambda, digits=3), sep="")
 	} else {
 		name <- paste(name, "1", sep="")
 	}
-	name <- paste(name, "}, {", sep="")
+	name <- paste(name, ", {", sep="")
 	if(!is.null(object$ar.coefficients)) {
 		name <- paste(name, length(object$ar.coefficients), sep="")
 	} else {
 		name <- paste(name, "0", sep="")
 	}
-	name <- paste(name, ", ", sep="")
+	name <- paste(name, ",", sep="")
 	if(!is.null(object$ma.coefficients)) {
 		name <- paste(name, length(object$ma.coefficients), sep="")
 	} else {
 		name <- paste(name, "0", sep="")
 	}
-	name <- paste(name, "}, {", sep="")
+	name <- paste(name, "}, ", sep="")
 	if(!is.null(object$damping.parameter)) {
-		name <- paste(name, round(object$damping.parameter, digits=6), sep="")
+		name <- paste(name, round(object$damping.parameter, digits=3), ",",sep="")
 	} else {
-		name <- paste(name, "-", sep="")
+		name <- paste(name, "-,", sep="")
 	}
-	
+  	
 	if(!is.null(object$seasonal.periods)) {
-		name <- paste(name, "}, {", sep="")
-		k.pos <- 1
-		for(i in object$seasonal.periods) {
-			name <- paste(name, "< ", sep="")
-			name <- paste(name, object$k.vector[k.pos], sep="")
-			name <- paste(name, ", ", sep="")
-			name <- paste(name, i, sep="")
-			name <- paste(name, " >", sep="")
-			k.pos <- k.pos+1
-			if(i != object$seasonal.periods[length(object$seasonal.periods)]) {
+		name <- paste(name, " {", sep="")
+    M <- length(object$seasonal.periods)
+		for(i in 1:M) {
+			name <- paste(name, "<", object$k.vector[i], ",", object$seasonal.periods[i], ">", sep="")
+			if(i < M) {
 				name <- paste(name, ", ", sep="")
 			} else {
 				name <- paste(name, "})", sep="")
 			}
 		}
 	} else {
-		name <- paste(name, "})", sep="")	
+		name <- paste(name, "{-})", sep="")	
 	}
 	return(name)
 }
