@@ -6,7 +6,7 @@
   seasonal.periods=NULL, use.arma.errors=TRUE, use.parallel=TRUE, num.cores=NULL, ...)}
 
 \arguments{
-\item{y}{The time series to be forecast. Can be \code{numeric}, \code{msts} or \code{ts}. Only univariate time series is supported.}
+\item{y}{The time series to be forecast. Can be \code{numeric}, \code{msts} or \code{ts}. Only univariate time series are supported.}
 \item{use.box.cox}{\code{TRUE/FALSE} indicates whether to use the Box-Cox transformation or not. If \code{NULL} then both are tried and the best fit is selected by AIC.}
 \item{use.trend}{\code{TRUE/FALSE} indicates whether to include a trend or not. If \code{NULL} then both are tried and the best fit is selected by AIC.}
 \item{use.damped.trend}{\code{TRUE/FALSE} indicates whether to include a damping parameter in the trend or not. If \code{NULL} then both are tried and the best fit is selected by AIC.}
@@ -17,17 +17,16 @@
 \item{...}{Additional parameters to be passed to \code{auto.arima} when choose an ARMA(p, q) model for the errors.}
 }
 
-\description{Fits a BATS model applied to \code{y}.}
+\description{Fits a BATS model applied to \code{y}, as described in De Livera, Hyndman & Snyder (2012). 
+Parallel processing is used by default to speed up the computatons.}
 
-\value{An object of class "\code{bats}".
-
-The generic accessor functions \code{fitted.values} and \code{residuals} extract useful features of
-the value returned by \code{ets} and associated functions.}
+\value{An object of class "\code{bats}". The generic accessor functions \code{fitted.values} and \code{residuals} extract useful features of
+the value returned by \code{bats} and associated functions.}
 
 \references{De Livera, A.M., Hyndman, R.J., & Snyder, R. D. (2012), Forecasting time series with complex seasonal patterns using exponential smoothing, \emph{Journal of the American Statistical Association}, to appear. 
 }
 
-\author{Rob J Hyndman and Slava Razbash}
+\author{Slava Razbash and Rob J Hyndman}
 
 \examples{
 fit <- bats(USAccDeaths)
